--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>hello world</h1>
     <a href="./Exercise 2 - Word Cloud/cloud.html"></a>
 </body>
 </html>
