add an index file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>hello world</h1>
-    <a href="./Exercise 2 - Word Cloud/cloud.html"></a>
+    <a href="./Exercise 2 - Word Cloud/cloud.html">EXERCISE 2</a>
 </body>
 </html>
